force-app/main/default/objects/Account/fields/Mercury_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Customer_Id__c</fullName>
    <label>Mercury Customer Id</label>
    <length>50</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>