force-app/main/default/objects/Account/fields/Mercury_Last_Sync_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Last_Sync_Attempt__c</fullName>
    <label>Mercury Last Sync Attempt</label>
    <type>DateTime</type>
</CustomField>