force-app/main/default/objects/Account/fields/Mercury_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Sync_Status__c</fullName>
    <label>Mercury Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>